# Learning_RUST

./: README.md
01_Ownership/: README.md
01_Ownership/ownership/: Cargo.toml
01_Ownership/ownership/src/: mut_ref.rs  ownership_functions_main.rs  ownership_references.rs
02_Structs/: README.md
02_Structs/struct/src/: main.rs
03_Enums/: README.md
03_Enums/enums/src/: main.rs
04_PatternMatching/: README.md
04_PatternMatching/if_let/src/: main.rs
04_PatternMatching/pattern_matching/src/: main.rs
05_Collections/: README.md
05_Collections/common_collections/: Cargo.toml
06_ErrorHandling/: README.md
07_Generics/: README.md
08_Traits/: README.md
09_LifeTimes/: README.md
10_Iterators/: README.md
11_Closures/: README.md
12_SmartPointers/: README.md
12_SmartPointers/MutableMutipleOwner/: Cargo.toml
13_Concurrency/: README.md
20_Projects/rstat/: Cargo.toml
20_Projects/tcp_proxy/: Cargo.toml
20_Projects/usb/: usb_details.txt
20_Projects/web_server/: 404.html  hello.html
arithmetic_expression_evaluator/src/: main.rs
blog_post/src/: lib.rs
closures/src/: main.rs
image_cli/: Cargo.toml
image_cli/src/: imagecli.rs
lifetime/src/: main.rs
myshell/: Cargo.toml
myshell/src/: iter1.rs  iter2.rs
ownership/: Cargo.toml
ownership/src/: main.rs
pattern/src/: main.rs
pointers/src/: main.rs
post/src/: lib.rs  main.rs
tcp_udp/: Cargo.toml
template-engine/src/: main.rs
testing/src/: main.rs
thread_channel/src/: main.rs
thread_mutex/src/: main.rs
threads/src/: main.rs
usb/src/: main.rs
vec/src/: main.rs
(+35 files in other folders)
